# codewars-training

./: .gitignore  alphabet_position.py  array_diff.py  binary_addition.py  file.csv  filter_list.py  high_and_low.py  remove_smallest.py  test.py
codewars/: binary_addition.py  reverse_words.py
csv_practice/: csv_reading_writing.py
oop/: area.py  area_of_circle.py  binary_search.py  pizza.py  pizza_cl.py  pizza_restaurant.py  practicing_property.py
pytest_course/frameworks_demo/: pyproject.toml  test_widget.py
pytest_course/testing/tests/: test_division_func.py
